--- a/package.json
+++ b/package.json
@@ -1,4 +1,9 @@
 {
+	"name": "@gmaps-re/pbfish",
+	"version": "1.0.0",
+	"description": "A parser for Google Maps' protobuf-like formats",
+	"author": "Emily Nagy",
+	"license": "MIT",
 	"devDependencies": {
 		"@types/jest": "^29.5.2",
 		"jest": "^29.5.0",
@@ -7,5 +12,8 @@
 	},
 	"scripts": {
 		"test": "jest"
-	}
+	},
+	"main": "dist/index.js",
+	"types": "dist/index.d.ts",
+	"type": "module"
 }
