--- a/tsconfig.json
+++ b/tsconfig.json
@@ -12,19 +12,17 @@
 		"noEmit": true,
 		"incremental": true,
 		"esModuleInterop": true,
-		"module": "esnext",
+		"module": "commonjs",
 		"moduleResolution": "node",
 		"resolveJsonModule": true,
 		"isolatedModules": true,
 		"jsx": "preserve",
-		"target": "esnext"
+		"target": "es6",
+		"outDir": "dist"
 	},
-	"include": [
-		"next-env.d.ts",
-		"**/*.ts",
-		"**/*.tsx"
-	],
 	"exclude": [
-		"node_modules"
+		"node_modules",
+		"dist",
+		"tests"
 	],
 }
