--- a/tsconfig.json
+++ b/tsconfig.json
@@ -9,16 +9,16 @@
 		"skipLibCheck": true,
 		"strict": false,
 		"forceConsistentCasingInFileNames": true,
-		"noEmit": true,
 		"incremental": true,
 		"esModuleInterop": true,
-		"module": "commonjs",
+		"module": "es2020",
 		"moduleResolution": "node",
 		"resolveJsonModule": true,
 		"isolatedModules": true,
 		"jsx": "preserve",
 		"target": "es6",
-		"outDir": "dist"
+		"outDir": "dist",
+		"baseUrl": "./"
 	},
 	"exclude": [
 		"node_modules",
