--- a/package.json
+++ b/package.json
@@ -6,6 +6,7 @@
 	"license": "MIT",
 	"devDependencies": {
 		"@types/jest": "^29.5.2",
+		"@types/lodash": "^4.14.202",
 		"jest": "^29.5.0",
 		"ts-jest": "^29.1.1",
 		"typescript": "^4.9.5"
@@ -15,5 +16,8 @@
 	},
 	"main": "dist/index.js",
 	"types": "dist/index.d.ts",
-	"type": "module"
+	"type": "module",
+	"dependencies": {
+		"lodash": "^4.17.21"
+	}
 }
