--- a/package.json
+++ b/package.json
@@ -1,12 +1,11 @@
 {
 	"name": "@gmaps-tools/pbfish",
-	"version": "0.7.0",
+	"version": "0.9.0",
 	"description": "A parser for Google Maps' protobuf-like formats",
 	"author": "Emily Nagy",
 	"license": "MIT",
 	"devDependencies": {
 		"@types/jest": "^29.5.2",
-		"@types/lodash": "^4.14.202",
 		"jest": "^29.5.0",
 		"ts-jest": "^29.1.1",
 		"typescript": "^4.9.5"
@@ -16,8 +15,5 @@
 	},
 	"main": "dist/index.js",
 	"types": "dist/index.d.ts",
-	"type": "module",
-	"dependencies": {
-		"lodash": "^4.17.21"
-	}
+	"type": "module"
 }
