--- a/package.json
+++ b/package.json
@@ -11,7 +11,8 @@
 		"typescript": "^4.9.5"
 	},
 	"scripts": {
-		"test": "jest"
+		"test": "jest",
+		"cov": "jest --coverage"
 	},
 	"main": "dist/index.js",
 	"types": "dist/index.d.ts",
