--- a/package.json
+++ b/package.json
@@ -1,20 +1,25 @@
 {
 	"name": "@gmaps-tools/pbfish",
-	"version": "1.1.0",
+	"version": "1.2.0",
 	"description": "A parser for Google Maps' protobuf-like formats",
 	"author": "Emily Nagy",
 	"license": "MIT",
 	"devDependencies": {
 		"@types/jest": "^29.5.2",
 		"jest": "^29.5.0",
-		"ts-jest": "^29.1.1",
+		"ts-jest": "^29.1.2",
 		"typescript": "^4.9.5"
 	},
 	"scripts": {
 		"test": "jest",
-		"cov": "jest --coverage"
+		"cov": "jest --coverage",
+		"build": "rm -rf dist && npx tsc -p tsconfig-es6.json && npx tsc -p tsconfig-cjs.json && cp dist/cjs/index.d.ts dist/index.d.ts"
 	},
-	"main": "dist/index.js",
-	"types": "dist/index.d.ts",
-	"type": "module"
+	"main": "./dist/cjs/index.js",
+	"module": "./dist/es6/index.js",
+	"types": "./dist/index.d.ts",
+	"exports": {
+		"require": "./dist/cjs/index.js",
+		"import": "./dist/es6/index.js"
+	}
 }
