--- a/tsconfig.json
+++ b/tsconfig.json
@@ -3,21 +3,20 @@
 		"lib": [
 			"dom",
 			"dom.iterable",
-			"esnext"
+			"esnext",
+			"es6",
+			"es2022"
 		],
-		"allowJs": true,
-		"skipLibCheck": true,
-		"strict": false,
+		"strict": true,
 		"forceConsistentCasingInFileNames": true,
-		"incremental": true,
-		"esModuleInterop": true,
-		"module": "es2020",
+		"module": "es2022",
 		"moduleResolution": "node",
 		"resolveJsonModule": true,
 		"isolatedModules": true,
-		"target": "es6",
+		"target": "es2022",
 		"outDir": "dist",
-		"baseUrl": "./"
+		"baseUrl": "./",
+		"declaration": true
 	},
 	"exclude": [
 		"node_modules",
